# esphome_matrixio

./: .gitignore  .pre-commit-config.yaml  README.md  matrix_voice.yaml  platformio.ini  pyproject.toml  requirements_test.txt  tox.ini
.github/workflows/: tox-latest.yml  tox-target.yml  tox.yml
esphome/components/matrixio/: matrixio.h
esphome/components/matrixio/adf_pipeline/: __init__.py  matrixio_adf_microphone.cpp  matrixio_adf_microphone.h  matrixio_adf_stream_writer.h
esphome/components/matrixio/light/: everloop.cpp  everloop.h
esphome/components/matrixio/speaker/: speaker.cpp
esphome_ci/: components.py  tests.py
examples/: matrixio_adf_voice_assistant.yaml  matrixio_media_player.yaml  matrixio_voice_assistant.yaml
examples/common/: everloop.yaml  voice_assistant.yaml  wifi.yaml
scripts/: set_esphome_target.py  setup_esphome.sh
tests/components/matrixio/: matrix_adf.yaml  matrix_base.yaml
