[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esphome-ci"
version = "2023.12.0"
description = "Linting and Testing external-components for ESPHome"
dependencies = [
    "colorama",
]

[tool.setuptools]
packages = ["esphome_ci"]

[tool.black]
target-version = ["py39", "py310"]
exclude = 'generated'
